syntax = "proto3";

//protoc --go_out=plugins=grpc:. *.proto

package game;

service Game {
    rpc StartGame (UserID) returns (Error);
    rpc StopGame (UserID) returns (Error);

    rpc SetDirection (UserAndDirection) returns (Error);
    rpc SetSpeed (UserAndSpeed) returns (Error);

    rpc GetPlayer (UserID) returns (GetPlayerResult);
    rpc GetPlayers (UserID) returns (GetPlayersResult);

    rpc GetFood (UserID) returns (GetFoodResult);

    rpc ListenEvents (UserID) returns (stream Event);
    rpc StopListenEvents (UserID) returns (Error);
}

message Position {
    int32 x = 1;
    int32 y = 2;
}

message Player {
    int32 user_id = 1;
    int32 size = 2;
    int32 direction = 3;
    int32 speed = 4;
    Position position = 5;
}

message Food {
    int32 id = 1;
    Position position = 2;
}

message UserID {
    int32 user_id = 1;
}

message Error {
    string error = 1;
}

message GetPlayerResult {
    Player player = 1;
}

message GetPlayersResult {
    repeated Player players = 1;
}

message UserAndSpeed {
    int32 user_id = 1;
    int32 speed = 2;
}

message UserAndDirection {
    int32 user_id = 1;
    int32 direction = 2;
}

message GetFoodResult {
    repeated Food food = 1;
}

message Event {
    string params = 1;
    string error = 2;
}